# expense_tracker

./: .gitignore  CMakeLists.txt  README.md
app/: build.gradle.kts
app/src/androidTest/java/br/com/expensetracker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/bridge/: core_bridge.cpp
app/src/main/cpp/core/: CMakeLists.txt  README.md
app/src/main/cpp/core/application/: AddRevenueUseCase.cpp
app/src/main/cpp/core/domain/: Expense.cpp  Money.cpp  Month.cpp  Month.h  Revenue.h
app/src/main/cpp/core/infrastructure/: Database.cpp  Database.h  Schema.cpp
app/src/main/cpp/core/interface/cli/: AddExpenseCommand.h  AddRevenueCommand.h  ArgParser.h  CommandFactory.cpp  CommandFactory.h  GetMonthlySummaryCommand.h
app/src/main/cpp/core/repository/: ExpenseRepository.h  PaymentMethodRepository.h  RevenueRepository.h  SQLiteExpenseRepository.cpp  SQLitePaymentMethodRepository.cpp  SQLiteRevenueRepository.cpp  SQLiteRevenueRepository.h
app/src/main/cpp/core/src/: CMakeLists.txt  main.cpp
app/src/main/cpp/core/src/application/: AddExpenseUseCase.h
app/src/main/cpp/core/src/domain/: Date.cpp  Date.h  Month.cpp  PaymentMethod.h  Revenue.cpp
app/src/main/cpp/core/src/interface/cli/: AddRevenueCommand.cpp
app/src/main/cpp/core/src/repository/: SQLiteExpenseRepository.h  SQLitePaymentMethodRepository.h  SQLiteRevenueRepository.cpp
app/src/main/cpp/core/test/: CMakeLists.txt  test_main.cpp
app/src/main/cpp/core/test/fakerepo/: FakeExpenseRepository.h  FakeRevenueRepository.h
app/src/main/java/br/com/expensetracker/: MainActivity.kt
app/src/main/java/br/com/expensetracker/bridge/: CoreBridge.kt
app/src/main/java/br/com/expensetracker/ui/: SummaryScreen.kt
app/src/main/java/br/com/expensetracker/viewmodel/: SummaryUiState.kt  SummaryViewModel.kt
app/src/test/java/br/com/expensetracker/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt  Date.h  DefaultCategories.cpp  DefaultCategories.h  MoneyManager.cpp  MoneyManager.h  PurchaseOrigin.h  main.cpp
src/application/: AddExpenseUseCase.cpp  AddExpenseUseCase.h  AddRevenueUseCase.h  GetMonthlySummaryUseCase.cpp  GetMonthlySummaryUseCase.h
src/domain/: Category.h  Date.cpp  Date.h  Expense.h  Money.cpp  Money.h  MoneyManager.cpp  Month.cpp  PaymentMethod.cpp  Purchase.cpp  Purchase.h  Revenue.cpp  Revenue.h
src/infrastructure/: Database.cpp  Schema.h  schema.sql
src/interface/cli/: AddExpenseCommand.cpp  ArgParser.cpp  GetMonthlySummaryCommand.cpp
src/repository/: Database.cpp  Database.h  PaymentMethodRepository.h  RevenueRepository.h  SQLiteExpenseRepository.cpp  SQLiteExpenseRepository.h  SQLiteRevenueRepository.cpp  SQLiteRevenueRepository.h
test/fakerepo/: FakeRevenueRepository.h
